--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:text="ZipCode"
+        android:text="@string/zipcode"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,6 @@
         android:background="@android:color/white"
         android:inputType="number"
         android:padding="6dp"
-        android:text="66202"
         app:layout_constraintEnd_toEndOf="@+id/zip_code_title_txt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/zip_code_title_txt" />
@@ -55,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Distance"
+        android:text="@string/distance"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/zip_code_title_txt"
@@ -70,7 +69,6 @@
         android:background="@android:color/white"
         android:inputType="number"
         android:padding="6dp"
-        android:text="66202"
         app:layout_constraintEnd_toEndOf="@+id/distance_title_txt"
         app:layout_constraintStart_toEndOf="@+id/zip_code_edit_text"
         app:layout_constraintTop_toBottomOf="@+id/distance_title_txt" />
@@ -82,7 +80,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:text="Get Data"
+        android:text="@string/get_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/distance_title_txt"
