--- a/app/src/main/res/layout/item_cardview_layout.xml
+++ b/app/src/main/res/layout/item_cardview_layout.xml
@@ -37,7 +37,6 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="16dp"
                     android:gravity="start"
-                    android:text="66202"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -51,7 +50,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="16dp"
                     android:gravity="start"
-                    android:text="City:"
+                    android:text="@string/city"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -69,7 +68,6 @@
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    android:text="fsfsdf"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/city_info_card_header"
                     app:layout_constraintTop_toBottomOf="@+id/zip_code_info_card"
@@ -82,7 +80,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="16dp"
                     android:gravity="start"
-                    android:text="State:"
+                    android:text="@string/state"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -95,7 +93,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="16dp"
-                    android:text="TextView"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -110,7 +107,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:gravity="start"
-                    android:text="Distance:"
+                    android:text="@string/distance"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -124,7 +121,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
-                    android:text="TextView"
                     android:textColor="@color/white"
                     android:textSize="24sp"
                     android:textStyle="bold"
