--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,29 @@
         app:layout_constraintStart_toEndOf="@+id/distance_title_txt"
         app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
 
+    <TextView
+        android:id="@+id/result_found_header_txt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/founed"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/zip_code_edit_text" />
+
+    <TextView
+        android:id="@+id/result_found_value_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@id/result_found_header_txt"
+        app:layout_constraintTop_toBottomOf="@+id/distance_edit_text" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_rv"
         android:layout_width="0dp"
@@ -97,7 +120,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/zip_code_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/result_found_header_txt" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
